@@ -387,6 +387,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6125) Add links to edit old versions to diff views
 * (bug 5127) Auto edit summary when creating redirect page
 * (bug 3926) Introduce {{#language:}} magic word
+* Fix section links from edit comments for [[:Image:Bla.jpg]] in section titles
 
 == Compatibility ==
 
